// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v2alpha;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "wfa/measurement/reporting/v2alpha/planning_report.proto";

option java_package = "org.wfanet.measurement.reporting.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "PlanningReportsServiceProto";

// planning_reports_service.proto
service PlanningReports {
  rpc CreatePlanningReport(CreatePlanningReportRequest)
      returns (PlanningReport);
  rpc GetPlanningReport(GetPlanningReportRequest) returns (PlanningReport);
  rpc ListPlanningReports(ListPlanningReportsRequest)
      returns (ListPlanningReportsResponse);
}

message CreatePlanningReportRequest {
  string parent = 1;
  string planning_report_id = 2;
  PlanningReport planning_report = 3;
  string request_id = 4;
}
